/* 2001–2005: Formule Renault en Formule Dree */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -19,23 +19,23 @@ Lewis Hamilton sat up skole up The John Henry Newman School, ne döär vrywillig
 === 1993–2000: Karten ===
 Hamilton begön med karten in 1993, doo hy acht was, up et Rye House Kart Circuit en begön al snel races en Cadetklasse-kampioonskappen too winnen. Twey jåren låter, benåderen hy McLaren F1 teambås Ron Dennis vöär ne handteakening en sei hem, "Hallo. Ik bün Lewis Hamilton. Ik wön et britsken kampioonskap en up nen dag wül ik in ow wågens ryden." Dennis skrev in syn handteakeningenbook, "Bel myn oaver neagen jår, dan reagelt wy wat." Hamilton reyd vöär Zip Young Guns Karting Team van Marvin Hines. Up de leavtyd van 12 jår was syne ryvårdigheyd sodånig houg dat Ladbrokes ne weddenskap annam, 40 üm 1, dat Hamilton vöär syne 23e nen Formule Eyn Grand Prix ewönnen had; nen anderen vöärspellen, 150 üm 1, dat hy  et World Drivers' Championship ewönnen had vöärdat hy 25 was. Vanav de Cadetrangen bevörderen hy når Junior Yamaha (1997) en Dennis roopen ''Hamilton'' uutendelik in 1998 by sich nådat hy noch ne Super One serie en syn tweyden britsken kampioonskap. Dennis kwam syne belovte nå en teakenen Hamilton vöär et McLaren driver development program. In dit kontrakt is ne optsy vöär nen tookümstig stuulken in de Formule Eyn, wat Hamilton uutendelik den jüngsten ryder oit maken den nen kontrakt teakenen dat låter leiden töt ne Formule Eynkarriere.
 
-Hamilton rükken wyder up in de Intercontinental A (1999), Formule A (2000) en Formule Super A (2001) rangen en wyr europaesk kampioon in 2000 med maximåle punten. In de Formule A en Formule Super A, rydend vöär TeamMBM.com, was Nico Rosberg syn teammåt, den låter ryden sol vöär de Williams en Mercedesteams in de Formule Eyn; sy sollen låter wederüm in eyn team sitten by Mercedes in 2013. Volgend up syne kartsuksessen maken den britsken Racing Drivers' Club hem töt "Rysende ster" lid in 2000.
+Hamilton rükkeden wyder up in de Intercontinental A (1999), Formule A (2000) en Formule Super A (2001) rangen en wyr europeesk kampioon in 2000 med maximåle pünten. In de Formule A en Formule Super A, rydend vöär TeamMBM.com, was Nico Rosberg syn teammåt, den låter ryden sol vöär de Williams en Mercedesteams in de Formule Eyn; sy sollen låter wederüm in eyn team sitten by Mercedes in 2013. Volgend up syne kartsuksessen maken den britsken Racing Drivers' Club hem töt "Rysende ster" lid in 2000.
 
-In 2001 maken Michael Schumacher ne eynmålige terügkeer når et karten en ryden teagen Hamilton as ok teagen andere tookümstige F1 koureurs Vitantonio Liuzzi en Nico Rosberg. Hamilton endigen uutendelik seavends, veer plåtsen achter Schumacher. Skonwal de twey mekare wenig sagen up de båne, prees Schumacher den jungen Brit.
+In 2001 maken Michael Schumacher ne eynmålige terügkeer når et karten en ryden teagen Hamilton as ok teagen andere tookümstige F1 koureurs Vitantonio Liuzzi en Nico Rosberg. Hamilton endigeden uutendelik seavendes, veer plåtsen achter Schumacher. Skonwal de twey mekare wenig sagen up de båne, prees Schumacher den jungen Brit.
 
 === 2001–2005: Formule Renault en Formule Dree ===
 Hamilton begön syne autosportkarriere in de britske Formule Renault Winter Series van 2001. Undanks dat hy crashen in syne darde ründe in de wågen tydens et testen, endigen hy vyvdes in den endstand in de winterserys. Dit leidden töt ne vulledige Formule Renault UK kampagne med Manor Motorsport in 2002. Hamilton beendigen et klassement as darden med dree oaverwinningen en dree pole positions. Hy blev nöch nen jår by Manor en wön et kampioonskap med tyn oaverwinningen en 419 punten teagenoaver de twey oaverwinningen en 377 punten van syn nöästen rivaal, Alex Lloyd. Ümdat hy et kampioonskap al te pakken had, missen Hamilton de låtste twey races van et seisoon üm syn debuut te måken in de seisoonsfinale van et britsken Formule 3 kampioonskap. Hyr was hy minder suksesvul: de eyrste race mus hy verlåten med nen platten band en in de tweyde vilen hy uut döär nen crash en wyr hy når et sykenhuus ebröcht nå ne botsing med syn teammåt Tor Graves. Hy kön syne snelheyd wal tonen tydens sowal den Macau Grand Prix as den Korea Super Prix, in de låtstenuumde startten hy up pole position by syne eyrste uptreaden up de båne en in pas syne veerde F3 race. Doo hy in 2002 bevrågd wyr oaver et vöäruutsicht üm eyn van de jüngste Formule Eyn koureurs oit te wörden, antwoordden Hamilton dat syn dool was "neet den jüngsten in de F1 te wean ...[mår] üm ervåringe up te doon en dan te låten sen wat ik kan in de F1".
 
-Låter in 2004, wül Williams ankundigen dat sy dichte by ne handteakening van Hamilton waren, mår sy deden et neet ümdat BMW, öär motorleverancyr up dat moment, hem neet wul financieren. Hy teakenen uutendelik upny by McLaren en maken syne debuut vöär Manor in de Formule 3 Euro Series van 2004. Sy wönnen eyn race en Hamilton endigen et jår as vyvden in et kampioonskap. Hy wön de Bahrain F3 Superprix en ryen eyn van de Macau F3 Grand Prix. Hamilton testten end 2004 vöär et eyrste vöär McLaren up Silverstone.
+Låter in 2004, wül Williams ankundigen dat sy dichte by ne handteakening van Hamilton waren, mår sy deden et neet ümdat BMW, öär motorleverancyr up dat moment, hem neet wul financieren. Hy teakeneden uutendelik upny by McLaren en måkeden syne debuut vöär Manor in de Formule 3 Euro Series van 2004. Sy wönnen eyn race en Hamilton endigen et jår as vyvden in et kampioonskap. Hy wön den F3 Superprix van Bahrein en ryen eyn van de F3 Groute Prys van Makau. Hamilton testten end 2004 vöär et eyrste vöär McLaren up Silverstone.
 
-Hamilton ging oaver når de regerende Euro Series kampionen ASM vöär et seisoon 2005 en domineren et kampioonskap, wårby hy 15 van de 20 runden wön. Dit hadden der 16 können wean mår hy wyr ediskwalificeerd vöär de oaverwinning up Spa-Francorchamps vanweagen nen technisk mankement dat ok verskydene andere koureurs uutschakelen. Hy wön ok de Marlboro Masters of Formula 3 in Zandvoort. Nå et seisoon lyt et britsken tydskrivt ''Autosport'' hem vöärkommen in öär "Top 50 koureurs van 2005" uutgåve en plåtsen Hamilton 24en.
+Hamilton ging oaver når de regerende Euro Series kampionen ASM vöär et seisoon 2005 en dominereden et kampioonskap, wårby hy 15 van de 20 runden wön. Dit hadden der 16 können wean mår hy wyr ediskwalificered vöär de oaverwinning up Spa-Francorchamps vanweagen nen technisk mankement dat ok verskydene andere koureurs uutschakeleden. Hy wön ok de Marlboro Masters of Formula 3 in Zandvoort. Nå et seisoon leet et britsken tydskrivt ''Autosport'' hem vöärkommen in öär "Top 50 koureurs van 2005" uutgåve en plåtseden Hamilton as 24en.
 
 === Seisoon van 2006: GP2 ===
 Vanweagen syn sukses in de Formule Dree ging hy vöär 2006 oaver når ASMs süsterteam ART Grand Prix in den GP2 . Net as öär süsterteam in de F3 waren ART de leiders van et veld en regerende kampionen ümdat sy in 2005 den GP2-kroun behåld hadden med Nico Rosberg. Hamilton wön et GP2-kampioonskap by syne eyrste poging, wårby hy Nelson Piquet Jr. en Timo Glock versloog.
 
-Under Hamiltons prestatsys was ouk ne dominante oaverwinning op de Nürburgringe, ündanks nen strav vöär versnellen in de pitstråte. Tydens syne thuusrace up Silverstone, as understötting vöär den britsken Grand Prix, halen Hamilton twey rivalen by Becketts, ne serie buchten up houge snelheyd (töt 150 myl per üre (240 km per üre in nen GP2-wågen) wår inhålen seldsåm is. In Istanbul herstellen hy van nen drai den hem når de achttynde plåtse terügwörpen döär de tweyde positsy te pakken in de låtste buchten. Hamilton wön de titel under üngewöäne umstandigheyden, wårby hy et låtsten punt dat hy nöydig had kreg nådat Giorgio Pantano syne snelste runde in den Monza demonstratsywedstryd afenömmen wyr. In de sprintrace, skonwal hy tweyds endigen en Piquet sesden, stönd hy 12 punten lös van syn rivål.
+Under Hamiltons prestatsys was ouk ne dominante oaverwinning op de Nürburgringe, ündanks nen strav vöär versnellen in de pitstråte. Tydens syne thuusrace up Silverstone, as understötting vöär den britsken Grand Prix, halen Hamilton twey rivalen by Becketts, ne serie buchten up houge snelheyd (töt 150 myl per üre (240 km per üre in nen GP2-wågen) wår inhålen seldsåm is. In Istanbul herstellen hy van nen drai den hem når de achttynde plåtse terügwörpen döär de tweyde positsy te pakken in de låtste buchten. Hamilton wön de titel under üngewöäne umstandigheyden, wårby hy et låtsten punt dat hy nöydig had kreg nådat Giorgio Pantano syne snelste runde in den Monza demonstratsywedstryd afenömmen wyr. In de sprintrace, skonwal hy tweyds endigen en Piquet sesdes, stönd hy 12 punten lös van syn rivål.
 
-Syn GP2-kampioonskap kwam tegelyk med ne leyge plåtse by McLaren nå et vertrek van Juan Pablo Montoya når NASCAR en van Kimi Räikkönen når Ferrari. Nå månden van spekulåtsy oaver ov Hamilton, Pedro de la Rosa ov Gary Paffett vöär 2007 nevven den verdeydigend kampioon Fernando Alonso plåtse möcht nemmen, wyr Hamilton bevestigd as tweyden koureur van et team. Hem wyr an et ende van septemberverteld van McLarens besluut, mår et niuws wyr nöch bynå twey månden neet bekend emakt uut angst dat et oaverskadüwd wyr döär de ankondiging van Michael Schumachers pensioon.
+Syn GP2-kampioonskap kwam tegelyk med ne leyge plåtse by McLaren nå et vertrek van Juan Pablo Montoya når NASCAR en van Kimi Räikkönen når Ferrari. Nå månden van spekulåtsy oaver ov Hamilton, Pedro de la Rosa ov Gary Paffett vöär 2007 nevven den verdeydigend kampioon Fernando Alonso plåtse möcht nemmen, wyr Hamilton bevestigd as tweyden koureur van et team. Hem wyr an et ende van september verteld van McLarens besluut, mår et niuws wyr noch bynå twey månden neet bekend emakt uut angst dat et oaverskadüwd wyr döär de ankondiging van Michael Schumachers pensioon.
 
 == Formule Eynkarriere ==
 
@@ -74,7 +74,7 @@ Hamilton wön den belgisken Grand Prix, mår låter wyr döär eoordeeld dat hy 
 
 In den italiaansken Grand Prix endigeden Hamilton seavendes en den vöärsprong van Hamilton in et kampioonskap was now noch eyn pünt. Hamilton endigeden dardes in de völgende race in Singapore, terwyl Massa geyn pünten pakkeden, wårdöär den vöärsprong van Hamilton in et kampioonskap upleep töt seaven pünten. In Fuji kreg Hamilton nen strav wårby hy mos döärryden (by de völgende pitrunde) vöär et van de båne düwen van andere wågen doo hy nen fout beging in de eyrste runde. Vöärdat Hamilton den strav kön uutsitten, probereden hy Massa too passeren, den hem rakeden nådat hy nen fout måkeden. Massa kreg vöär disse aktsy låter nen strav wårby hy mos döärryden (by de völgende pitrunde) en Hamilton endigeden twålvdes. Med noch twey races too gån had Hamilton nen vöärsprong in et werldkampioonskap van vyv pünten up Massa. Den chineesken Grand Prix wön Hamilton wårdöär hy med nen vöärsprong van seaven pünten in et werldkampioonskap de låtste race van et seisoon inging. Achterav sei Hamilton: "Et heyle weekende hebbet wy god an unse syde ehad so as altyd en et heylen team hevt fantatisk wark edane by et vöärbereiden van den wågen, den nen dröym was üm in too ryden.<nowiki>''</nowiki>
 [[Bestaand:Hamilton_Brazil_2008_celebrations.jpg|links|duum|Hamilton en syn team vyren synen eyrsten Formule Eyn werldkampioonskapstitel.]]
-By den brasiliaansken Grand Prix mos Hamilton minstens as vyvden endigen as Massa de race wön üm et werldkampioonskap veilig too stellen. Net vöär de race begön der ne reagenbuie en Hamilton was as veerden eplåtst vöärdat hy terügvelen når de sesde plåtse nådat hy nen pitsop had emåked vöär dröyge banden. Wisselvallige neaderslag beteakenden dat alle koureurs meyrdere målen wisselden tüsken reagenbanden en banden vöär droug weader en med dree runden too gån lag Hamilton vyvdes en mos hy enkel syne positsy vasteholden üm den titel too verseakeren. In de vöärlåtste runde passereden Vettel Hamilton en den begön de låtste runde as sesden en lek de vyvde plåtse neet meyr too können terügnemmen. Skonwal måkeden hy en Vettel in de låtste runde nen gat van 18 sekunden good döär Timo Glock, den et möylik had up banden vöär ne dröyge wegge, by de låtste bochte in too hålen sodat hy de vyvde plåtse terügnam en blev de racewinnaar Massa vöär den titel med eyn pünt vöär. Dit beteakenden dat Hamilton et werldkampioonskap van de Formule Eyn van 2008 had epakt en wyr den jüngsten koureur den den titel wön, den eyrsten swarten koureur en den eyrsten britsken koureur den et werldkampioonskap wön sinds Damon Hill in 1996.
+By den brasiliaansken Grand Prix mos Hamilton minstens as vyvden endigen as Massa de race wön üm et werldkampioonskap veilig too stellen. Net vöär de race begön der ne reagenbuie en Hamilton was as veerden eplåtst vöärdat hy terügvelen når de sesde plåtse nådat hy nen pitsop had emåked vöär dröyge banden. Wisselvallige neaderslag beteakeneden dat alle koureurs meyrdere målen wisseleden tüsken reagenbanden en banden vöär droug weader en med dree runden too gån lag Hamilton vyvdes en mos hy enkel syne positsy vasteholden üm den titel too verseakeren. In de vöärlåtste runde passereden Vettel Hamilton en den begön de låtste runde as sesden en lek de vyvde plåtse neet meyr too können terügnemmen. Skonwal måkeden hy en Vettel in de låtste runde nen gat van 18 sekunden good döär Timo Glock, den et möylik had up banden vöär ne dröyge wegge, by de låtste bochte in too hålen sodat hy de vyvde plåtse terügnam en blev den racewinnaar Massa vöär den titel med eyn pünt vöär. Dit beteakeneden dat Hamilton et werldkampioonskap van de Formule Eyn van 2008 had epakt en wyr den jüngsten koureur den den titel wön, den eyrsten swarten koureur en den eyrsten britsken koureur den et werldkampioonskap wön sinds Damon Hill in 1996.
 
 ===== Racistisk misbruuk =====
 In february wyr Hamilton verbål anevallen en up andere wys misbruukt tydens de testraces vöär et seisoon up et Circuit de Catalunya in Katalonie döär verskillende spaanske tooskowers dy swarte gesichtsvarv en swart prüüke hadden en ok shirts med de wöärde "De family van Hamilton". Hamilton wyr wyd en syd unpopulair in Spanje vanweagen syne rivaliteyt med synen spaansken vöärmåligen teammåt Fernando Alonso. De FIA wårskuweden spaanske autoriteyten vöär herhoaling van sülk gedrag en lancereden ne "Race teagen racisme" kampagne.
