/* Seisoon van 2006: GP2 */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -33,9 +33,9 @@ Hamilton ging oaver når de regerende Euro Series kampionen ASM vöär et seisoo
 === Seisoon van 2006: GP2 ===
 Vanweagen syn sukses in de Formule Dree ging hy vöär 2006 oaver når ASMs süsterteam ART Grand Prix in den GP2 . Net as öär süsterteam in de F3 waren ART de leiders van et veld en regerende kampionen ümdat sy in 2005 den GP2-kroun behåld hadden med Nico Rosberg. Hamilton wön et GP2-kampioonskap by syne eyrste poging, wårby hy Nelson Piquet Jr. en Timo Glock versloog.
 
-Under Hamiltons prestatsys was ouk ne dominante oaverwinning op de Nürburgringe, ündanks nen strav vöär versnellen in de pitstråte. Tydens syne thuusrace up Silverstone, as understötting vöär den britsken Grand Prix, halen Hamilton twey rivalen by Becketts, ne serie buchten up houge snelheyd (töt 150 myl per üre (240 km per üre in nen GP2-wågen) wår inhålen seldsåm is. In Istanbul herstellen hy van nen drai den hem når de achttynde plåtse terügwörpen döär de tweyde positsy te pakken in de låtste buchten. Hamilton wön de titel under üngewöäne umstandigheyden, wårby hy et låtsten punt dat hy nöydig had kreg nådat Giorgio Pantano syne snelste runde in den Monza demonstratsywedstryd afenömmen wyr. In de sprintrace, skonwal hy tweyds endigen en Piquet sesdes, stönd hy 12 punten lös van syn rivål.
+Under Hamiltons prestatsys was ouk ne dominante oaverwinning op de Nürburgringe, ündanks nen strav vöär versnellen in de pitstråte. Tydens syne thuusrace up Silverstone, as understötting vöär den britsken Grand Prix, haleden Hamilton twey rivalen in by Becketts, ne serie buchten up houge snelheyd (töt 150 myl per üre (240 km per üre in nen GP2-wågen) wår inhålen seldsåm is. In Istanbul herstellen hy van nen drai den hem når de achttynde plåtse terügwörpen döär de tweyde positsy te pakken in de låtste buchten. Hamilton wön de titel under üngewöäne umstandigheyden, wårby hy et låtsten punt dat hy nöydig had kreg nådat Giorgio Pantano syne snelste runde in den Monza demonstratsywedstryd afenömmen wyr. In de sprintrace, skonwal hy tweyds endigen en Piquet sesdes, stönd hy 12 punten lös van syn rivål.
 
-Syn GP2-kampioonskap kwam tegelyk med ne leyge plåtse by McLaren nå et vertrek van Juan Pablo Montoya når NASCAR en van Kimi Räikkönen når Ferrari. Nå månden van spekulåtsy oaver ov Hamilton, Pedro de la Rosa ov Gary Paffett vöär 2007 nevven den verdeydigend kampioon Fernando Alonso plåtse möcht nemmen, wyr Hamilton bevestigd as tweyden koureur van et team. Hem wyr an et ende van september verteld van McLarens besluut, mår et niuws wyr noch bynå twey månden neet bekend emakt uut angst dat et oaverskadüwd wyr döär de ankondiging van Michael Schumachers pensioon.
+Syn GP2-kampioonskap kwam tegelyk med ne leyge plåtse by McLaren nå et vertrek van Juan Pablo Montoya når NASCAR en van Kimi Räikkönen når Ferrari. Nå månden van spekulåtsy oaver ov Hamilton, Pedro de la Rosa ov Gary Paffett vöär 2007 nevven den verdeydigend kampioon Fernando Alonso plåtse möcht nemmen, wyr Hamilton bevestigd as tweyden koureur van et team. Hem wyr an et ende van september vertelled van McLarens besluut, mår et niuws wyr noch bynå twey månden neet bekend emåked uut angst dat et oaverskadüwd wyr döär de ankondiging van Michael Schumachers pensioon.
 
 == Formule Eynkarriere ==
 
