--- a/Etiopie.mw
+++ b/Etiopie.mw
@@ -2,7 +2,7 @@
 
 De höyvdstad en ouk gröätste stad is [[Addis Abeba]]. Dee stad ligt up een paar kilometer van den [[Oustafrikaansken klouv]] den as et land verdeylt in de nubiske en somaliske tektoniske plate
 
-[[File:Flag of Ethiopia (1975–1987).svg|thumb|The traditionele vlagge van Ethiopie]
+[[File:Flag of Ethiopia (1975–1987).svg|thumb|The traditionele vlagge van Ethiopie]]
 
 Bütte van de öldst bekende moderne [[menske]] sint vünden in Ethiopie.<ref>Nature. Hopkin, Michael. "Ethiopia is top choice for cradle of ''Homo sapiens''. 16 february 2005.</ref> Et wördt breyd beskowd as et land wår as de moderne menske vöär et eyrst up den trad güng når et [[Middenousten]] en vöärdan.<ref>Li, J.Z. Absher, D.M. Tang, H. Southwick, A.M. Casto, A.M.  Ramachandran, S. Cann, =H.M. Barsh, G.S. Feldman, M. Cavalli-Sforza, L.L. Myers, R.M. "Worldwide Human Relationships Inferred from Genome-Wide Patterns of Variation". Science, vol 319, is 5866. p 1100–1104 (2008). DOI 10.1126/science.1153717.</ref><ref>[https://web.archive.org/web/20110629125652/http://www.bloomberg.com/apps/news?pid=newsarchive&sid=awJVkvnk8KjM Bloomberg.com. (Archiveerd). "Humans Moved From Africa Across Globe, DNA Study Says". Skreaven up 21 february 2008.] Bekeaken up 16 maert 2009 </ref> Volgens språkenkündigen koloniseerden de eyrste lüde med ne afroasiatiske språke de Hoorn in de [[Neolitiske tyd]].<ref>Zarins, Juris (1990). "Early Pastoral Nomadism and the Settlement of Lower Mesopotamia". Bulletin of the American Schools of Oriental Research, vol 280, is 280. p 31–65. Jstor 1357309. DOI 10.2307/1357309.</ref> Med ne geskedenisse töt 2000 jår vöär [[Jezus Christus|Christus]] was Ethiopie de meyste tyd ne [[monarchy]]. Uut verhalen blikt dat de dynasty stichted wör döär de [[salomo]]niske geslachtslyne van de [[Köäniginne van Skeba]], under de eyrste köäning [[Menelik I]].<ref>[https://www.nationalgeographic.com/travel/destinations/africa/ethiopia/mysterious-queen-sheba-legend-church-archaeology/?cmpid=org=ngp::mc=social::src=twitter::cmp=editorial::add=tw20190213travel-resurfsheba::rid=&sf207660858=1 Nationalgeographic.com. "In search of the real Queen of Sheba".] Skreaven up 3 december 2018.</ref> Tydens de eyrste pår hunderd jår was et [[köäningryk Aksum]] ne eynheid binnen de streake<ref>''Ancient India, A History Textbook'' for Class XI, Ram Sharan Sharma, National Council of Educational Research and Training, India</ref><ref>Munro-Hay, p. 57</ref><ref>Henze, Paul B. (2005) ''Layers of Time: A History of Ethiopia'', ISBN 1-85065-522-7.</ref> en dårnå et ethiopiske keiserryk vanaf ungeveyr 1137. Tydens de tweyde hälvde van de 19. eywe en de [[wedloup üm Afrika]], bleyven [[Liberia]] en Ethiopie lange unafhanglik en vry van kolonisaty. Doo as nå de kolonisaty vöäle nye ståten unafhanglik wördden, nöämen se de klöären van de ethiopiske vlagge oaver. In [[1936]] wör et land besat döär [[Italie]] en ümmedöyped töt [[Italiaansk Ethiopie]], töt at et wör bevryded tydens den [[Tweyden Wearldoorlog]]. Ethiopie was den eyrsten afrikaansken lidståt van de [[Vereynigde Natys]]. In [[1974]] wör den ethiopisken keiser [[Haile Selassie]] afsat döär de [[Derg]], ne [[kommunisme|kommunistiske]] militäre regeyring med hülpe van de [[Sovjetuny]]. In [[1987]] richteden de Derg de [[Demokratiske Volksrepublik Ethiopie]] up, mär wör in [[1991]] afsat döär et [[Ethiopiske revolutionäär-demokratiske volksfront]], wat vandage noch an de macht is.
 
