*Empty MediaWiki Message*

--- a/Etiopie.mw
+++ b/Etiopie.mw
@@ -1,3 +1,31 @@
+{{Laandtabel-twd|
+naaminlaandssproak=የኢትዮጵያ ፌዴራላዊ ዴሞክራሲያዊ ሪፐብሊክ <br>yeʾĪtiyoṗṗya Fēdēralawī Dēmokirasīyawī Rīpebilīk ([[amhaarsk]])|
+naam-nds=Ethiopie|
+vlagge=Flag_of_Ethiopia.svg|
+naam=Ethiopie|
+woapn=Coat_of_arms_of_Ethiopia_(Official).svg|
+lokasie=LocationEthiopia.svg|
+sproaken=[[amhaarsk]] (regeyringsspråke), [[oromo (språke)|Oromo]], [[Somalisk]], [[Tigrinyaansk]]|
+heufdstad=[[Addis Abeba]]|
+regeringsvörm=Federale republik|
+religie=Ethiopisk ortodoks (43,5%), Islam (33%), protestantsk (18,6%) |
+pctwater=0,7|
+km2=1.104.300|
+dichtheid=92,7|
+inwonners=102.403.196|region=
+|breedtegroad=9/1//S|
+lengtegroad=38/45//E|
+munteenheid=Birr|
+valutakode=(ETB)|tiedzone=UTC+3 (EAT)|
+feestdag=|tld=et|
+laandkode=ET|
+tel=+251|
+webstea=|
+ofbeelding2=|
+umskrieving2=
+}}
+
+
 '''Ethiopie''', in et [[amhaarsk]]: ኢትዮጵያ, (uutspreaken as ''ityopja''), [[Tigrinya (språke)|Tigrinya]]: ኢትዮጵያ, [[oromo (språke)|Oromo]]: Itoophiyaa, [[somali (språke)|Somali]]: Itoobiya), officiääl de '''Federale Democratiske Republik Ethiopie''' is een land in een deyl van noordoustafrika wat bekend steyt as [[de hoorn van Afrika]]. Et grenset an [[Eritrea]] in et noorden, [[Djibuti]] in et noordousten, et selvstürende gebeed [[Somaliland]] en [[Somalie]] in et ousten, [[Kenia]] in et süden, [[Süüd-Sudan]] in et westen en [[Sudan]] in et noordwesten. Med meyr as 102 miljoon inwoaners is Ethiopie et drukstbevolkte inslöäten land van de wearld en de tweyde dichtstbevolkte land van [[Afrika]], up ne uppervlakte van 1.100.000 km2.
 
 De höyvdstad en ouk gröätste stad is [[Addis Abeba]]. Dee stad ligt up een paar kilometer van den [[Oustafrikaansken klouv]] den as et land verdeylt in de nubiske en somaliske tektoniske plate
