*Empty MediaWiki Message*

--- a/Fietse.mw
+++ b/Fietse.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Diamant.jpeg|thumb|Een ouwe fietse]]
-Een '''fietse''' is een voertuug veur één of meerdere personen dat deur spierkrach vort-edreven wonnen. Meestentieds besteet een fietse uut twee wielen, een iezere umraming, een [[zaol]], een [[sture]], een [[fietsketten]] en trappers mit pedalen.
+“Deze pagina is gehackt door pedootje0892”
 
 == De loopfietse ==
 Beron [[Karl von Drais]] bedöch een zogenaamde ''loopfietse''. Disse bestung uut een [[holt|houten]] umraming, houten wielen mit een iezeren velg, een iezig primitief zaol, een primitief sture, en een soort remme op 't achterwiel. De loopfietse had gien trappers; de bestuurder beweug zich dus vort deur zien eigen of te zetten tien de grond. 't Eerste exemplaar ontstung in [[1816]]. Von Drais neumde zien toestel naor humzelf een ''draisine''. De naam leef nog vort in 't wagentjen dat deur spoorkeerls gebruuk wonnen.
