--- a/Maarten_Luther.mw
+++ b/Maarten_Luther.mw
@@ -9,7 +9,7 @@ Striedgeskriften duur, vor in tugen Luther wörden ok drek vertaald in 't [[Midd
 == Theologiese ideen ==
 't Evangelie is de waore schat van de karke. Disse stelling, uut de 95 stellings van 1517, is de aard veur 't benul in de theologie van Luther. In de middeleewen wördden de vraoge naor 't goed ween veur God (vri'jsprake van zunden) ok as deel van de kristelijke verzuuningsleer esteld. De rooms-kathelieke leer göngen dervan uut dat 't goed ween veur God deels töt staand ebracht kunnen wörden deur 't op biezunder geleuf an Kristus 't doe van goede warken. Goede warken levvert daormet 'n bi'jdrage an 't heil, 't behoald. Deur slechte warken (zunden) kunnen men - zo was de klassieke kathelieke opvatting - de heiligmakende genaa Gods verliezen. Deur bestudering van de Romeinenbrief kwaam Luther töt de opvatting dat goediging 'n vri'je gave Gods is die God bewes an godloze zundige meansen. Disse goediging is verwörven deur Kristus. De godloze kreg deel an de verwörven gerechtigheid van Kristus deur 't geleuf (Romeinen 1:16,17). 't Geleuf maakt iene met Kristus en plaatst dorumme de godloze weer op de juuste verhoalding met God.
 
-== Anti-jöads ==
+== Anti-jöädsk ==
 Vöär de meyste lüde steyt Maarten Luther bekend üm syn 95 stellings. Ouk dat hee ehülpen hevt ümme van de macht van de katolike karke of te kummen, wat vöär een koppel lüde een bevryding was. 
 
 Mar der bint der neet vöäle dee weat dat Luther ouk med jöäden gangs ewesd hevt. Hy döäd de katolike karke de sküld der van dat de jöäden sich neet töt Jesus bekeyren wolden. Den solden et ear unmöägelik emaked hebben dat sy Jesus as Messias seen konden. Luther dachden dat wanneyr as syn reformaty in gang was, dat de jöäden sich dan wal bekeyren solden. 
