--- a/Maarten_Luther.mw
+++ b/Maarten_Luther.mw
@@ -12,7 +12,7 @@ Striedgeskriften duur, vor in tugen Luther wörden ok drek vertaald in 't [[Midd
 == Anti-jöädsk ==
 Vöär de meyste lüde steyt Maarten Luther bekend üm syn 95 stellings. Ouk dat hee ehülpen hevt ümme van de macht van de katolike karke of te kummen, wat vöär een koppel lüde een bevryding was. 
 
-Mar der bint der neet vöäle dee weat dat Luther ouk med jöäden gangs ewesd hevt. Hy döäd de katolike karke de sküld der van dat de jöäden sich neet töt Jesus bekeyren wolden. Den solden et ear unmöägelik emaked hebben dat sy Jesus as Messias seen konden. Luther dachden dat wanneyr as syn reformaty in gang was, dat de jöäden sich dan wal bekeyren solden. 
+Mar der bint der neet vöäle dee weatet dat Luther ouk med jöäden gangs ewesd hevt. Hy döäd de katolike karke de sküld der van dat de jöäden sich neet töt Jesus bekeyren wolden. Den solden et ear unmöägelik emaked hebben dat sy Jesus as Messias seen konden. Luther dachden dat wanneyr as syn reformaty in gang was, dat de jöäden sich dan wal bekeyren solden. 
 
 Toom as nå een set de jöäden noch neet når de karke kwamen, speaten et hüm dat. Nå verloup van de tyd was hee neet meyr te sprekken oaver jöäden. Up 1543 skreav hee  et bökyn ''Von den Juden und ihren Lügen'' ('' 'Oaver de jöäden en ear löägenes'''). Dårin geyt hee vlink teagen de jöäden tekeyr. Wat as hee döär in skreaven, dårvan segt der nu een koppel lüde dat de Nazi’s et vöär hüm edåne hebbet.
 
