--- a/Maarten_Luther.mw
+++ b/Maarten_Luther.mw
@@ -14,7 +14,7 @@ Vöär de meyste lüde steyt Maarten Luther bekend üm syn 95 stellings. Ouk dat
 
 Mar der bint der neet vöäle dee weatet dat Luther ouk med jöäden gangs ewesd hevt. Hy döäd de katolike karke de sküld der van dat de jöäden sich neet töt Jesus bekeyren wolden. Den solden et ear unmöägelik emaked hebben dat sy Jesus as Messias seen konden. Luther dachden dat wanneyr as syn reformaty in gang was, dat de jöäden sich dan wal bekeyren solden. 
 
-Toom as nå een set de jöäden noch neet når de karke kwamen, speaten et hüm dat. Nå verloup van de tyd was hee neet meyr te sprekken oaver jöäden. Up 1543 skreav hee  et bökyn ''Von den Juden und ihren Lügen'' ('' 'Oaver de jöäden en ear löägenes'''). Dårin geyt hee vlink teagen de jöäden tekeyr. Wat as hee döär in skreaven, dårvan segt der nu een koppel lüde dat de Nazi’s et vöär hüm edåne hebbet.
+Toon as nå een set de jöäden noch neet når de karke kwamen, speaten et hüm dat. Nå verloup van de tyd was hee neet meyr te sprekken oaver jöäden. Up 1543 skreav hee  et bökyn ''Von den Juden und ihren Lügen'' ('' 'Oaver de jöäden en ear löägenes'''). Dårin geyt hee vlink teagen de jöäden tekeyr. Wat as hee döär in skreaven, dårvan segt der nu een koppel lüde dat de Nazi’s et vöär hüm edåne hebbet.
 
 Mar Luther hadden niks teagen jöäden as rasse, mar wal wat teagen oar gelöyv. Dår as de Nazi’s de Jöäden as rasse neet anstönden. Dår müttet wy wal een verskil in seen.
 
