*Empty MediaWiki Message*

--- a/Etiopie.mw
+++ b/Etiopie.mw
@@ -5,7 +5,7 @@ vlagge=Flag_of_Ethiopia.svg|
 naam=Ethiopie|
 woapn=Coat_of_arms_of_Ethiopia_(Official).svg|
 lokasie=LocationEthiopia.svg|
-sproaken=[[amhaarsk]] (regeyringsspråke), [[oromo (språke)|Oromo]], [[Somalisk]], [[Tigrinyaansk]]|
+sproaken=[[amhaarsk]] <small>(regeyringsspråke)</small>, [[oromo (språke)|Oromo]], [[Somalisk]], [[Tigrinyaansk]]|
 heufdstad=[[Addis Abeba]]|
 regeringsvörm=Federale republik|
 religie=Ethiopisk ortodoks (43,5%), Islam (33%), protestantsk (18,6%) |
